--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             function showPhotos(){
                 var PHOTO_BASE = "photos/";
                 var photos = [
-                    { point: "43.97855, 15.38354", src: PHOTO_BASE + "4.jpg" },
+                    { point: "43.97855, 15.38354", src: PHOTO_BASE + "4.jpg" }
                     //{ point: "43.97844, 15.38459", src: PHOTO_BASE + "2.jpg" },
                     //{ point: "43.97847, 15.38215", src: PHOTO_BASE + "3.jpg" },
                     //{ point: "43.97907, 15.38198", src: PHOTO_BASE + "3.jpg" }, //Null
