--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <button id="start_btn" class="btn btn-primary btn-large centered">❤ Bắt đầu</button>
         <div id="map_canvas" style="width:100%; height:100%;"></div>
         <div id="curtain"></div>
-        <div id="end_text" class="centered" style="">Anh ❤ Em </div>
+        <div id="end_text" class="centered">Anh ❤ Em </div>
         <audio preload="auto" id="music">
             <source src="music/dadada.ogg" type="audio/ogg" />
             <source src="music/dadada.mp3" type="audio/mpeg" />
