--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
             function init() {
                 // play the background music
-                var music =  document.getElementById("music");
+                var music =  document.getElementById("musics");
                 music.play();
 
                 map = new google.maps.Map(document.getElementById("map_canvas"), {
