--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
         <div id="curtain"></div>
         <div id="end_text" class="centered">Anh ❤ Em </div>
         <audio preload="auto" id="music">
-            <source src="music/dadada.ogg" type="audio/ogg" />
-            <source src="music/dadada.mp3" type="audio/mpeg" />
+            <source src="musics/dadada.ogg" type="audio/ogg" />
         </audio>
 
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -195,7 +194,7 @@
 
             function init() {
                 // play the background music
-                var music =  document.getElementById("musics");
+                var music =  document.getElementById("music");
                 music.play();
 
                 map = new google.maps.Map(document.getElementById("map_canvas"), {
